After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 700006 - audio/video: base classes have suboptimal error handling when allocating a buffer not via a bufferpool
audio/video: base classes have suboptimal error handling when allocating a bu...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal major
: 1.1.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-05-09 12:22 UTC by Sebastian Dröge (slomo)
Modified: 2013-05-24 15:26 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Sebastian Dröge (slomo) 2013-05-09 12:22:47 UTC
See summary, problem is that just NULL is returned and the subclasses a) expect always to get a buffer currently and b) there's no way to report errors properly here (are we flushing? did negotiation fail? what happened?)

Related to bug #699124
Comment 1 Sebastian Dröge (slomo) 2013-05-24 15:26:53 UTC
commit b8c6413a8efebd2272eb98171f3dcf936c20ae0b
Author: Sebastian Dröge <slomo@circular-chaos.org>
Date:   Fri May 24 16:52:50 2013 +0200

    audio: Always provide a buffer in gst_audio_(enc|dec)oder_allocate_output_buffer()
    
    We have no way of tell the caller of the exact error (e.g. if we're flushing),
    so will have to wait until the caller uses API that returns a GstFlowReturn,
    for example when pushing this buffer.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=700006

commit 0c2c909497f5f97074cf1b0d26bd14939f892b6f
Author: Sebastian Dröge <slomo@circular-chaos.org>
Date:   Fri May 24 16:51:17 2013 +0200

    video: Always provide a buffer in gst_video_(enc|dec)oder_allocate_output_buffer()
    
    We have no way of tell the caller of the exact error (e.g. if we're flushing),
    so will have to wait until the caller uses API that returns a GstFlowReturn,
    for example when pushing this buffer.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=700006